// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site Nav should render a dropdown when the dropdown button is clicked 1`] = `
<nav
  className="site-header__nav"
>
  <div
    className="nav-wrapper container"
  >
    <Link
      className="left brand-logo"
      replace={false}
      to="/"
    >
      MoreRecipes
    </Link>
    <button
      className="dropdown right"
      onClick={[Function]}
    >
      <UserImg
        type="inSiteNav"
        user={
          Object {
            "fullname": "John Doe",
            "id": 1,
          }
        }
      />
    </button>
  </div>
</nav>
`;

exports[`Site Nav should render a dropdown when the dropdown button is clicked 2`] = `
<nav
  className="site-header__nav"
>
  <div
    className="nav-wrapper container"
  >
    <Link
      className="left brand-logo"
      replace={false}
      to="/"
    >
      MoreRecipes
    </Link>
    <button
      className="dropdown right"
      onClick={[Function]}
    >
      <UserImg
        type="inSiteNav"
        user={
          Object {
            "fullname": "John Doe",
            "id": 1,
          }
        }
      />
      <NavDropDown
        fullname="John Doe"
        handleLogout={[Function]}
      />
      <div
        className="dropdown-overlay"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      />
    </button>
  </div>
</nav>
`;

exports[`Site Nav should render with right amount of elements 1`] = `
<nav
  className="site-header__nav"
>
  <div
    className="nav-wrapper container"
  >
    <Link
      className="left brand-logo"
      replace={false}
      to="/"
    >
      MoreRecipes
    </Link>
    <button
      className="dropdown right"
      onClick={[Function]}
    >
      <UserImg
        type="inSiteNav"
        user={
          Object {
            "fullname": "John Doe",
            "id": 1,
          }
        }
      />
    </button>
  </div>
</nav>
`;
